💄 style (Binoks):  new

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import "../styles/Diagonals.css";
 
 ---
 
-<Layout title="Tailcast">
+<Layout title="BINOKS">
   <Navbar client:load />
   <Hero client:load />
   <Features1 client:load />
